# pomotmr

./: .gitignore  README.md  meson.build  meson.options  test.log}
include/: cl_args.h  defaults.h  error_log.h  escape_sequences.h  input.h  interface.h  logging.h  ring.h  server.h  sig_handling.h  timer.h  timer_log.h  typedefs.h
scripts/: build_test.sh  client_test.sh  fix_pointers.sh  make_tar.sh  run_test.sh
src/: cl_args.c  error_log.c  input.c  interface.c  logging.c  main.c  meson.build  ring.c  server.c  sig_handling.c  timer.c  timer_log.c
tests/: meson.build  ring_test.c  test_main.c
